{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player Controls",
            "id": "34993261-9c7b-4ba2-aea8-afacb367f78f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "ad1880ea-26d1-4ca4-bd86-633aff3cfade",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookAt",
                    "type": "PassThrough",
                    "id": "49444f7b-a7ad-4b55-80f1-b00bc1ef88af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "f0fd01a4-14ca-424d-a26a-4f8c235caaf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "3b01b44a-cfcf-4914-b020-b3529a304d78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5bc13abb-aca0-418c-bf8e-7e285a6cddfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Context Action",
                    "type": "Button",
                    "id": "7108753d-2bda-458b-9953-e23fcbe98cc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Context Attach",
                    "type": "Button",
                    "id": "bd72dc35-9446-42bd-a619-00a41104f044",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Context Attack",
                    "type": "Button",
                    "id": "eefe59f4-0152-4f87-82f8-e33f97e902d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Context Lock",
                    "type": "Button",
                    "id": "3fc03b77-c703-4610-b269-2e35e407b992",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponWheelRight",
                    "type": "Button",
                    "id": "8d962215-d924-45a8-bb61-617939d7d2b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WeaponWheelLeft",
                    "type": "Button",
                    "id": "c41bfef0-6249-4188-b448-86d4846a280a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HolsterWeapon",
                    "type": "Button",
                    "id": "c0163dc5-c9f8-4fc4-a4d9-c2ed9da380df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f6260775-4bc9-47e5-bd2c-1ed9d13d02b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b8ab9e52-335b-4d29-9b03-4b0553532f3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "452dd734-2310-4361-a50c-5116568062fd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8ad834ba-b866-45fc-b131-b8ae11f6a0ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3685359b-01b4-40b2-8d9b-e32171d61173",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5aa1c32-21a6-4f94-96e8-29ec0999ac12",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e971381-5e8e-433c-a698-9d8e47d75853",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "GamePad",
                    "action": "LookAt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f40c063c-fd56-4d97-b8da-dafc2f87eb6b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44464e09-34ae-4713-b011-f4cb81a7b25e",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bce5050-4b37-4ff8-9f91-a5a2dc9ef250",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "640ad8ca-33fe-4367-b537-d507d0ce8881",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8ace604-9af9-43ed-90c9-8118d4be622e",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86f56218-2fae-4e2b-8a82-5aa7d2a430ae",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d31cb0f-2884-47f6-8515-41ffa1e95a75",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Context Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "820083c7-51e1-49cc-af70-9ef81721f206",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Context Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00b92c00-c0ff-4a5d-8d3b-e20440dcf465",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Context Attach",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6e69e6b-8abe-4cf7-bab4-e8f1c412b7ea",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Context Attach",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd71a05c-e99a-4c72-9625-ff308a29b0f0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Context Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a20f077-f56f-4e32-a692-05bb3c53f301",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Context Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d00ef00d-a70b-4d50-8b2a-5da09cb16fed",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Context Lock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "295ce895-7ddc-4a33-bab1-9c78e97af5fd",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Context Lock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "751efc60-75ce-4f31-88d6-af71c9c1dfb1",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponWheelRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af701111-6759-4ddd-a423-334c9cfcad1f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponWheelLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "748f7bde-ce12-41e1-9551-3cdcfdb6f285",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HolsterWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8ca5530f-7c40-43dd-bb11-5525c5f142b6",
            "actions": [
                {
                    "name": "Context Start",
                    "type": "Button",
                    "id": "3d3a34fe-8d92-4f3e-a7bc-6dd4bcebb1e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "485e0f40-9fb7-4b87-a8bf-c3fd94612b82",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Context Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9300ec8-895d-408c-8c5e-a173f216560c",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Context Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": []
        }
    ]
}